:bug: fix alignment issue with the logo

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -976,6 +976,9 @@ video {
 .pb-24 {
   padding-bottom: 6rem;
 }
+.pb-40 {
+  padding-bottom: 10rem;
+}
 .text-center {
   text-align: center;
 }
